Alignement des textes sur la page et correction du responsive pour mobile

--- a/app/styles/home.css
+++ b/app/styles/home.css
@@ -161,6 +161,7 @@
     border-radius: 100%;
     width:100%;
     height:100%;
+    text-align: center;
 }
 /* BLOG PANEL */
 #blog-bg {
